# SiftView

./: .gitignore  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  projectOverview.md  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  pages.yml
scripts/: sync-version.js  validate-capabilities.js  validate-capabilities.test.js
src/: App.css  App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: README.md  default.json
src-tauri/permissions/: allow-compute-diff.toml  allow-detect-content.toml  allow-format-json.toml  allow-read-file.toml  allow-write-file.toml
src-tauri/src/: lib.rs  main.rs
src/components/: DiffPickerModal.tsx  DiffView.tsx  EditorPane.tsx  FormatPreviewModal.tsx  InspectorPanel.tsx  TabBar.test.tsx  TabBar.tsx
src/core/: tauriBridge.ts
src/test/: setup.ts
src/utils/: path.test.ts  path.ts
test-files/: README.md  mixed-content.txt  sample.csv  sample.env  sample.html  sample.json  sample.properties  sample.txt  sample.xml  sample.yaml
