[package]
name = "siftview"
version = "0.1.0"
description = "Lightweight text and file viewer with intelligent content inspection"
authors = ["you"]
edition = "2021"

[lib]
name = "siftview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = { version = "2", features = ["text"] }
tokio = { version = "1", features = ["fs", "rt", "macros"] }
csv = "1"
serde_yaml = "0.9"
quick-xml = "0.36"

